TEST_PROGRAMS/VALID/05/loop_miss_2nd_part.go
/* Three-part loop missing the second part. */

package main

func main() {
	for i := 0 ; ; i++ {

	}
}
